; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/acpica/extr_utstate.c_acpi_ut_delete_generic_state.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/acpica/extr_utstate.c_acpi_ut_delete_generic_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.acpi_generic_state = type { i32 }

@ut_delete_generic_state = common dso_local global i32 0, align 4
@acpi_gbl_state_cache = common dso_local global i32 0, align 4
@return_VOID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @acpi_ut_delete_generic_state(%union.acpi_generic_state* %0) #0 {
  %2 = alloca %union.acpi_generic_state*, align 8
  store %union.acpi_generic_state* %0, %union.acpi_generic_state** %2, align 8
  %3 = load i32, i32* @ut_delete_generic_state, align 4
  %4 = call i32 @ACPI_FUNCTION_TRACE(i32 %3)
  %5 = load %union.acpi_generic_state*, %union.acpi_generic_state** %2, align 8
  %6 = icmp ne %union.acpi_generic_state* %5, null
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load i32, i32* @acpi_gbl_state_cache, align 4
  %9 = load %union.acpi_generic_state*, %union.acpi_generic_state** %2, align 8
  %10 = call i32 @acpi_os_release_object(i32 %8, %union.acpi_generic_state* %9)
  br label %11

11:                                               ; preds = %7, %1
  %12 = load i32, i32* @return_VOID, align 4
  ret void
}

declare dso_local i32 @ACPI_FUNCTION_TRACE(i32) #1

declare dso_local i32 @acpi_os_release_object(i32, %union.acpi_generic_state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
